--- a/StProjectText/StProjectText/Views/Home/Index.cshtml
+++ b/StProjectText/StProjectText/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page - testDiff - 2021-06-06";
+    ViewBag.Title = "Home Page - testDiff - 2021-06-06 1424";
 }
 
 <div class="jumbotron">
